Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignBooleanIntObj.quorum
class Main
    action Main
        Integer v
        v:SetValue(5)
        Test(v)
    end

    action Test(boolean var)
    end
end
